# brandguard

./: .env.example  .env.production  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: build-and-test.yml  cd.yml  ci.yml  deploy.yml  docker-compose.test.yml  e2e-tests.yml  fix-deploy.yml.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/versions/: 001_initial_schema.sql
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  alerts.py  billing.py  companies.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: company.py  sentiment.py
backend/app/schemas/: company.py
backend/app/services/analyzers/: risk_scorer.py  sentiment_analyzer.py  sentiment_analyzer.py.backup  trend_analyzer.py
backend/app/services/data_collectors/: financial_collector.py  news_collector.py  reviews_collector.py
backend/app/services/notifications/: alert_service.py
backend/app/services/payment/: stripe_service.py
backend/tests/: conftest.py  factories.py  test_sentiment_analyzer.py
backend/tests/integration/: test_companies.py
frontend/: Dockerfile  Dockerfile.prod  build-test.sh  index.html  junit.xml  nginx.conf  package-lock.json  package.json  playwright.config.ts  report.json  run-e2e.sh  run-tests.sh  setup-tests.sh  vite.config.ts  vitest.config.ts
frontend/playwright-report/: index.html
frontend/scripts/: setup-playwright.sh
frontend/src/assets/styles/: main.css
frontend/src/components/: CompanyCard.vue
frontend/src/components/__tests__/: CompanyCard.spec.ts
frontend/src/router/: index.ts
frontend/src/services/: apiService.ts
frontend/src/stores/: company.ts
frontend/src/tests/: setup.ts
frontend/src/types/: index.ts
frontend/src/views/: CompanyDetails.vue  Dashboard.vue  Settings.vue
frontend/tests/e2e/: auth.spec.ts  company.spec.ts  dashboard.spec.ts  fixtures.ts  passing.spec.ts  smoke.spec.ts  utils.ts  verify-setup.spec.ts
frontend/tests/e2e/pages/: CompanyModal.ts  DashboardPage.ts
frontend/tests/e2e/specs/: alerts.spec.ts  company-crud.spec.ts  dashboard.spec.ts
frontend/tests/e2e/utils/: apiMocks.ts  simpleMocks.ts  testData.ts
k8s/: backend-deployment.yaml  ingress.yaml  namespace.yaml  postgres-statefulset.yaml
load_tests/: locustfile.py
monitoring/: prometheus.yml
scripts/: deploy.sh  fix_linting.sh  health-check.sh  install-requirements.sh  setup.sh
terraform/: main.tf
