[tool.poetry]
name = "brandguard-backend"  
version = "1.0.0"           
description = "BrandGuard Backend API"
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
redis = "^5.0.0"
celery = "^5.3.4"
pydantic = "^2.5.0"
httpx = "^0.25.2"
structlog = "^23.2.0"
prometheus-fastapi-instrumentator = "^6.1.0"
elasticsearch = "^8.11.0"
aiohttp = "^3.9.0"
beautifulsoup4 = "^4.12.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
transformers = "^4.36.0"
spacy = {version = "^3.7.0", optional = true}
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.12.0"
bandit = "^1.7.5"
types-python-jose = "^3.5.0.20250531"
types-python-dateutil = "^2.9.0.20251115"
types-requests = "^2.32.4.20250913"
types-aiofiles = "^25.1.0.20251011"
types-pyyaml = "^6.0.12.20250915"
types-redis = "^4.6.0.20241004"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml"
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "asyncio: async tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
